Introduce common parent pom for all 'opennlp-sandbox' components (#79)
* introduce common parent pom for all 'opennlp-sandbox' components

- adds in most sandbox components
- fixes some forbiddenapis plugin warnings in `opennlp-similarity` classes
- adds GH actions
- adds `.gitattributes`
- addresses PR reviewers' comments

* Normalize all the line endings

* introduce common parent pom for 'opennlp-sandbox' components

- clears non-required, unclear text files (garbage?) from test resource folder in `opennlp-similarity` component which was causing the build to fail on Win environments

* Set file encoding to UTF-8 to avoid cpXXX on Windows GitHub actions builds

---------

Co-authored-by: Richard Zowalla <richard.zowalla@hs-heilbronn.de>